--- a/ansible/playbooks/ubuntu22-cis-hardening-audit.yml
+++ b/ansible/playbooks/ubuntu22-cis-hardening-audit.yml
@@ -1,8 +1,13 @@
 ---
 - hosts: all
   become: true
-  roles:
-    - ubuntu22CIS   # apply STIG requirement controls
+  tasks:
+    - name: Audit Ubuntu 22
+      include_role:
+        name: ubuntu22CIS
+  when:
+    - ansible_facts['ansible_distribution'] == "Ubuntu"
+    - ansible_facts['ansible_distribution_major_version'] == "22"
   vars:
     ubtu22cis_rule_5_3_4: false
     ubtu22cis_rule_1_4_3: false
