--- a/ansible/playbooks/ubuntu22-cis-hardening-audit.yml
+++ b/ansible/playbooks/ubuntu22-cis-hardening-audit.yml
@@ -7,8 +7,8 @@
       include_role:
         name: ubuntu22CIS
       when:
-        - ansible_facts['ansible_distribution'] == "Ubuntu"
-        - ansible_facts['ansible_distribution_major_version'] == "22"
+        - ansible_facts['distribution'] == "Ubuntu"
+        - ansible_facts['distribution_major_version'] == "22"
       vars:
         ubtu22cis_rule_5_3_4: false
         ubtu22cis_rule_1_4_3: false
