test: slurp audit results

--- a/ansible/playbooks/ubuntu22-cis-hardening-audit.yml
+++ b/ansible/playbooks/ubuntu22-cis-hardening-audit.yml
@@ -16,6 +16,21 @@
         audit_only: true
         run_audit: true
         setup_audit: true
+    - name: Find result files
+      find:
+        paths: /opt
+        recurse: yes
+        file_type: file
+      register: found_files
+    - name: Slurp file contents
+      slurp:
+        src: "{{ item.path }}"
+      loop: "{{ found_files.files }}"
+      register: slurped_files
+    - name: Set facts
+      set_fact:
+        "file_{{ item.item.path | basename }}": "{{ item.content | b64decode }}"
+      loop: "{{ slurped_files.results }}"
     - name: Unsupported OS
       debug:
         msg: "This OS or OS version is not supported"
