--- a/requirements.yml
+++ b/requirements.yml
@@ -17,3 +17,7 @@ collections:
   - name: ansible.posix
     source: https://github.com/ansible-collections/ansible.posix
     type: git
+
+  - name: community.aws
+    source: https://github.com/ansible-collections/community.aws
+    type: git
