--- a/ansible/playbooks/ssm-test.yaml
+++ b/ansible/playbooks/ssm-test.yaml
@@ -1,12 +1,12 @@
 ---
 - name: SSM connectivity test
   hosts: all
-  remote_user: ec2-user
+  remote_user: ssm-user
   gather_facts: false
   connection: community.aws.aws_ssm
   vars:
     ansible_aws_ssm_region: us-east-1
-    ansible_remote_tmp: /tmp/.ansible/tmp
+    #ansible_remote_tmp: /tmp/.ansible/tmp
   tasks:
     - name: Hello world
       ansible.builtin.shell: echo "hello world from $(hostname)"
